# users_service

./: .env  Cargo.toml  README.md  check_output.txt
.sqlx/: query-56598298fbb476a937726c886241b94b92becb2404461cc15cc28550f38b9421.json  query-8395b6562226e1c775d578ebe20e7dc2c26854c89a7f6fc3a63fe8490a7a54b2.json  query-a1df4d61d6db4da6e2fce4bf3c2cef6803ac169960e752a878ec2906f18796d2.json
migrations/: 20241124000001_create_users_auth.sql  20250106150000_add_audit_columns.sql  20250106153000_fix_schema.sql
src/: docs.rs  main.rs  routes.rs  state.rs
src/handlers/: user_handler.rs
src/models/: users.rs
src/repository/: user_repository.rs
src/services/: user_service.rs
