[package]
name = "user_service"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "uuid",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
utoipa = { version = "4.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
